# chipflow-examples

./: .gitignore  .gitmodules  CYTHON_IMPLEMENTATION.md  Makefile  README.md  chipflow.toml  override-yowasp.txt  pyproject.toml
.devcontainer/: devcontainer.json  postcreate.sh
.github/workflows/: main.yaml  mcu_soc.yaml  minimal.yaml
common/sim/: models.h
mcu_soc/: Makefile  README.md  chipflow.toml
mcu_soc/design/: design.py
mcu_soc/design/ips/: pdm.py  pwm.py
mcu_soc/design/sim/: doit_build.py  main.cc
mcu_soc/design/steps/: board.py  sim.py
mcu_soc/design/tests/: events_reference.json  input.json
minimal/: README.md  chipflow.toml
minimal/design/: design.py
minimal/design/sim/: doit_build.py  main.cc
minimal/design/software/: doit_build.py  main.c
minimal/design/steps/: _chipflow_top.py  board.py  sim.py  software.py
minimal/design/tests/: events_reference.json
my_design/: design.py
my_design/sim/: cython_main.cc  doit_build.py
my_design/sim/cython_models/: __init__.py  cxxrtl_capi.pyx  cxxrtl_capi_example.py  cxxrtl_capi_module.py  cxxrtl_capi_wrap.h  cxxrtl_wrap.h  models.pyx  setup.py  setup_capi.py
my_design/software/: main.c  nya_a.h  umu.h
my_design/steps/: board.py  sim.py
my_design/tools/: json_compare.py
picosoc_verilog/: Makefile  README.md  chipflow.toml
picosoc_verilog/design/: design.py  picosoc_asic_top.v
picosoc_verilog/design/sim/: doit_build.py  main.cc
picosoc_verilog/design/software/: doit_build.py  main.c  start.s
picosoc_verilog/design/steps/: software.py
picosoc_verilog/design/tests/: events_reference.json
tools/: check_project.py  gen_overrides.py  json_compare.py
