
# Project metadata

[project]
name = "gf130-design"
version = "0.0.0"
description = ""
authors = [
  {name = "Robert Taylor", email = "rob.taylor@chipflow.io" },
  {name = "Catherine Zotova", email = "catherine.zotova@chipflow.io" },
]
license = {file = "LICENSE.md"}

requires-python = ">=3.10"
dependencies = [
    "amaranth[builtin-yosys]>=0.5.1",
    "amaranth-cv32e40p @ git+https://github.com/ChipFlow/amaranth-cv32e40p",
    "amaranth-orchard @ git+https://github.com/ChipFlow/amaranth-orchard",
    "chipflow-lib @ git+https://github.com/ChipFlow/chipflow-lib.git",
    "cocotb>=1.9.2",
    "pyuvm~=3.0.0",
    "ziglang==0.11.0",
    "amaranth-soc @ git+https://github.com/amaranth-lang/amaranth-soc",
]

# Build system configuration

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

# Development workflow configuration

[tool.pdm.resolution]
allow-prereleases = true

[tool.pyright]
diagnosticMode=false
typeCheckingMode = "off"
reportInvalidTypeForm = false
reportMissingImports = false
reportUnboundVariable = false

[tool.ruff.lint]
ignore = ['F403', 'F405', 'F841']

[tool.pdm.version]
source = "scm"

[tool.pdm.scripts]
test.cmd = "pytest"
test-cov.cmd = "pytest --cov=my_design cov-report=term"
test-cov-html.cmd = "pytest --cov=my_design --cov-report=html"
# test-docs.cmd = "sphinx-build -b doctest docs/ docs/_build"
lint.cmd = "ruff check"
# docs.cmd = "sphinx-build docs/ docs/_build/ -W --keep-going"
chipflow.cmd = "chipflow"
submit.cmd = "chipflow silicon submit"


[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "pytest>=7.2.0",
    "pytest-cov>=0.6",
]
