
# Project metadata

[project]
name = "gf130-design"
version = "0.0.0"
description = ""
authors = [
  {name = "Robert Taylor", email = "rob.taylor@chipflow.io" },
  {name = "Catherine Zotova", email = "catherine.zotova@chipflow.io" },
]
license = {file = "LICENSE.md"}

requires-python = ">=3.10"
dependencies = [
    "amaranth[builtin-yosys]>=0.5.1",
    "amaranth-cv32e40p @ git+https://github.com/ChipFlow/amaranth-cv32e40p",
    "amaranth-orchard @ git+https://github.com/ChipFlow/amaranth-orchard",
    "minerva @ git+https://github.com/minerva-cpu/minerva",
    "chipflow-lib @ git+https://github.com/ChipFlow/chipflow-lib.git",
    "ziglang==0.11.0",
    "amaranth-soc @ git+https://github.com/amaranth-lang/amaranth-soc",
]

# Build system configuration

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.resolution]
allow-prereleases = true

# Development workflow configuration

[tool.pyright]
diagnosticMode=false
typeCheckingMode = "off"
reportInvalidTypeForm = false
reportMissingImports = false
reportUnboundVariable = false

[tool.ruff.lint]
ignore = ['F403', 'F405', 'F841']

[tool.pdm.version]
source = "scm"

[tool.pdm.scripts]
_.env_file = ".env.toolchain"
json-compare.call = "tools.json_compare:main"
check-project.call = "tools.check_project:main"
test.cmd = "pytest"
test-cov.cmd = "pytest --cov=my_design cov-report=term"
test-cov-html.cmd = "pytest --cov=my_design --cov-report=html"
# test-docs.cmd = "sphinx-build -b doctest docs/ docs/_build"
lint.cmd = "ruff check"
# docs.cmd = "sphinx-build docs/ docs/_build/ -W --keep-going"
submit.composite = ["check-project", "chipflow silicon submit {args}"]
board-load-software-ulx3s.composite = ["check_project", "openFPGALoader -fb ulx3s -o 0x00100000 $PDM_RUN_CWD/build/software/software.bin"]
board-load-ulx3s.composite = ["check_project", "openFPGALoader -b ulx3s $PDM_RUN_CWD/build/top.bit"]
_run-sim.shell = "cd $PDM_RUN_CWD/build/sim && ./sim_soc"
sim-run.composite = [
    "check-project",
    "chipflow sim",
    "chipflow software",
    "_run-sim {args}"
    ]
sim-check.composite = [
    "check-project",
    "sim-run {args}",
    "python -m json_compare my_design/tests/events_reference.json build/sim/events.json"
    ]



[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "pytest>=7.2.0",
    "pytest-cov>=0.6",
]
